Fixed header spacing again

--- a/css/style.less
+++ b/css/style.less
@@ -10,8 +10,9 @@ div#wrap {
 }
 
 h1 {
-	border-bottom: 0.15em solid black;
+	border-bottom: 0.14em solid black;
 	display:inline-block;
+	line-height:1.1em;
 	span {
 		color:#E54028;
 	}
